; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_si7021.c_si7021_crc8.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_si7021.c_si7021_crc8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @si7021_crc8(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  br label %8

8:                                                ; preds = %36, %3
  %9 = load i32, i32* %6, align 4
  %10 = add nsw i32 %9, -1
  store i32 %10, i32* %6, align 4
  %11 = icmp ne i32 %9, 0
  br i1 %11, label %12, label %37

12:                                               ; preds = %8
  %13 = load i32*, i32** %5, align 8
  %14 = getelementptr inbounds i32, i32* %13, i32 1
  store i32* %14, i32** %5, align 8
  %15 = load i32, i32* %13, align 4
  %16 = load i32, i32* %4, align 4
  %17 = xor i32 %16, %15
  store i32 %17, i32* %4, align 4
  store i32 0, i32* %7, align 4
  br label %18

18:                                               ; preds = %33, %12
  %19 = load i32, i32* %7, align 4
  %20 = icmp slt i32 %19, 8
  br i1 %20, label %21, label %36

21:                                               ; preds = %18
  %22 = load i32, i32* %4, align 4
  %23 = and i32 %22, 128
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %21
  %26 = load i32, i32* %4, align 4
  %27 = shl i32 %26, 1
  %28 = xor i32 %27, 49
  store i32 %28, i32* %4, align 4
  br label %32

29:                                               ; preds = %21
  %30 = load i32, i32* %4, align 4
  %31 = shl i32 %30, 1
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %29, %25
  br label %33

33:                                               ; preds = %32
  %34 = load i32, i32* %7, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %7, align 4
  br label %18

36:                                               ; preds = %18
  br label %8

37:                                               ; preds = %8
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
